--- a/codepipeline.yaml
+++ b/codepipeline.yaml
@@ -1,4 +1,21 @@
 AWSTemplateFormatVersion: 2010-09-09
+
+Parameters: 
+  GitHubOwner:
+    Type: String
+    AllowedPattern: "[A-Za-z0-9-]+"
+    Default: quick-refs
+
+  GitHubRepository:
+    Type: String
+    AllowedPattern: "[A-Za-z0-9-]+"
+
+  GitHubBranch:
+    Type: String
+    AllowedPattern: "[A-Za-z0-9-]+"
+    Default: master
+
+
 Resources:
   CodeBuildServiceRole:
     Type: 'AWS::IAM::Role'
@@ -57,7 +74,7 @@ Resources:
       ServiceRole: !GetAtt CodeBuildServiceRole.Arn
       Source:
         Type: GITHUB
-        Location: https://github.com/walesangobiyi/cicd-pipeline-general.git
+        Location: !Sub 'https://github.com/${GitHubOwner}/${GitHubRepository}.git'
         BuildSpec: buildspec.yaml
         Auth:
             Type: OAUTH
@@ -68,12 +85,10 @@ Resources:
         Webhook: true
         FilterGroups:
             - - Type: EVENT
-                Pattern: PULL_REQUEST_CREATED, PULL_REQUEST_UPDATED
+                Pattern: PULL_REQUEST_CREATED, PULL_REQUEST_UPDATED, PULL_REQUEST_REOPENED
               - Type: BASE_REF
-                Pattern: !Sub ^refs/heads/master$
+                Pattern: !Sub ^refs/heads/${GitHubBranch}$
       Environment: 
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_SMALL
         Image: aws/codebuild/standard:4.0
-
-#####
